--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- container contain the heading and input box for tacking values  -->
     <div class="container">
         
-        <div class="title">To do list</div> <!-- the title of the page -->
+        <div class="title">To-Do List</div> <!-- the title of the page -->
         <div class="box">
             <input type="text" class="input" id="input" placeholder="Enter text : to do list "> <!--taking the input value -->
             <!-- the add button  -->
